recursion.lessons.recursion.tree.Tree.scala.error
Tree:9: error: not enough arguments for method tree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameters length, angle, shrink.
	tree(steps-1)
            ^